--- a/index.html
+++ b/index.html
@@ -1,70 +1,60 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Muebles Black Schafer</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="/css/main.css">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Muebles Black Schafer</a>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Muebles Black Schafer</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="logo.svg" alt="Muebles Black Schafer">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de</a>
+                        <a class="nav-link" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/servicios.html">Servicios</a>
+                        <a class="nav-link" href="#">Proyectos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/productos.html">Productos</a>
+                        <a class="nav-link" href="#">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                        <a class="nav-link" href="#">Contacto</a>
                     </li>
                 </ul>
             </div>
-        </nav>
-
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container text-center">
-                <h1 class="display-4">Bienvenido a Muebles Black Schafer</h1>
-                <p class="lead">Tu destino para encontrar la elegancia en muebles.</p>
-            </div>
         </div>
+    </nav>
 
-        <div class="container text-center feature">
-            <h2>Nuestros Servicios</h2>
-            <div class="row">
-                <div class="col-lg-4">
-                    <h3>Servicio 1</h3>
-                    <p>Descripción del servicio 1.</p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Servicio 2</h3>
-                    <p>Descripción del servicio 2.</p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Servicio 3</h3>
-                    <p>Descripción del servicio 3.</p>
-                </div>
-            </div>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Descubre el arte de decorar tu hogar con Muebles Black Schafer</h1>
+            <p>Explora nuestra colección exclusiva de muebles y accesorios para el hogar.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Explorar colección</a>
         </div>
+    </div>
 
-        <footer class="container text-center mt-4 mb-4">
-            <p>&copy; 2024 Muebles Black Schafer. Todos los derechos reservados.</p>
-        </footer>
+    <footer class="footer">
+        <div class="container">
+            <span>&copy; 2024 Muebles Black Schafer. Todos los derechos reservados.</span>
+        </div>
+    </footer>
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    </body>
-    </html>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
